<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nanodegree_apps"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/colorOrange"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/colorOrange"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/colorOrange"/>
    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/colorOrange"/>
    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/colorOrange"/>
    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/colorPink"/>
    </LinearLayout>


